# VesselReIdentification

./: .gitignore  CLEANUP_PLAN.md  README.md  pyproject.toml  requirements.txt
configs/: gallery.yaml  inference.yaml  shared.yaml  sweep.yaml  sweep_best.yaml  sweep_coarse.yaml  sweep_fine.yaml  sweep_wandb_2day.yaml  sweep_wandb_best.yaml  sweep_wandb_coarse.yaml  sweep_wandb_fine.yaml  train.yaml  train_2day.yaml
configs/saved_configs/: train_no_inference.yaml
data/: README.md  all_labels.csv  all_labels_missing_files.csv  fetched_event_ids.txt  gallery.csv  query.csv  train_missing_files.csv  val.csv
exampleModels/example02/: config.yaml  metrics.json  train_stats.json
exampleModels/example03/: config.yaml  metrics.json  train_stats.json
exampleModels/example04/: config.yaml  metrics.json  train_stats.json
exampleModels/example05/: config.yaml  metrics.json  train_stats.json
frontend/: package.json  vite.config.ts
src/vessel_reid/: __init__.py  paths.py
src/vessel_reid/api/: README.md  api.py  api_helper.py  api_helper_skylight.py  backfill_headings.py  config.py  count_mmsi.py  data_utils.py  debug_image_url.py  elasticsearch_client.py  fetch_images.py  filter_clouds.py  graphql_client.py  populate_data.py  populate_elastic.py  populate_skylight.py  utils.py
src/vessel_reid/app/: api.py  db.py  utils.py
src/vessel_reid/cli/: __init__.py  build_gallery.py  infer.py  split_ids.py  train.py  visualize.py
src/vessel_reid/data/: __init__.py  api_helper.py  api_helper_elastic.py  api_helper_skylight.py  config.py  crop.py  crop_water.py  dataset.py  (+9 more)
(+44 files in other folders)
